--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <label for="grade">Grade:</label>
             <select id="grade" name="grade" required>
                 <option value="">Select your grade</option>
-                <option value="7">Grade 7</option>
                 <option value="7A">7A</option>
                 <option value="7B">7B</option>
                 <option value="7C">7C</option>
@@ -27,6 +26,34 @@
                 <option value="7E">7E</option>
                 <option value="7F">7F</option>
                 <option value="7G">7G</option>
+                <option value="8A">8A</option>
+                <option value="8B">8B</option>
+                <option value="8C">8C</option>
+                <option value="8D">8D</option>
+                <option value="8E">8E</option>
+                <option value="8F">8F</option>
+                <option value="8G">8G</option>
+                <option value="9A">9A</option>
+                <option value="9B">9B</option>
+                <option value="9C">9C</option>
+                <option value="9D">9D</option>
+                <option value="9E">9E</option>
+                <option value="9F">9F</option>
+                <option value="9G">9G</option>
+                <option value="10A">10A</option>
+                <option value="10B">10B</option>
+                <option value="10C">10C</option>
+                <option value="10D">10D</option>
+                <option value="10E">10E</option>
+                <option value="10F">10F</option>
+                <option value="10G">10G</option>
+                 <option value="11A">11A</option>
+                <option value="11B">11B</option>
+                <option value="11C">11C</option>
+                <option value="11D">11D</option>
+                <option value="11E">11E</option>
+                <option value="11F">11F</option>
+                <option value="11G">11G</option>
             </select>
 
             <label for="food">Select your food:</label>
@@ -35,8 +62,16 @@
                 <option value="Cheese Patty">Cheese Patty</option>
                 <option value="Chicken Patty">Chicken Patty</option>
                 <option value="Beef Patty">Beef Patty</option>
+                <option value="Soy Patty">Soy Patty</option>
                 <option value="Coco Bread">Coco Bread</option>
                 <option value="Bun & Cheese">Bun & Cheese</option>
+                <option value="Bun">Bun</option>
+                <option value="Coconut Bread">Coconut Bread</option>
+                <option value="Apple">Apple</option>                
+                <option value="Bun & Cheese">Bun & Cheese</option>
+                <option value="Club Sandwich">Club Sandwich</option>
+                <option value="Nature Valley">Nature Valley</option>
+    
             </select>
 
             <label for="drink">Select your drink:</label>
@@ -50,6 +85,7 @@
                 <option value="Pepsi">Pepsi</option>
                 <option value="D&G">D&G</option>
                 <option value="Bigga">Bigga</option>
+                 <option value="Gatorade">Gatorade</option>
             </select>
 
             <label for="specialRequests">Special Requests:</label>
@@ -61,7 +97,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 School Lunch Program (JD🌟)</p>
+        <p>&copy; 2024 School Lunch Program </p>
     </footer>
 
     <!-- Place the JavaScript here, before the closing body tag -->
